<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".ui.quiz.QuizActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/ToolbarStyle"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/top_app_bar"
            app:subtitle="@string/minutes_remain"
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:id="@+id/ll_quiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_questions_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey"
            android:clipToPadding="false"
            android:paddingBottom="8dp"
            tools:itemCount="1"
            tools:listitem="@layout/list_item_question_number" />

        <ImageView
            android:id="@+id/iv_question"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:gravity="center"
            android:src="@drawable/ticket_1_2" />

        <TextView
            android:id="@+id/tv_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="#363A43"
            android:textSize="18sp"
            tools:text="Вопрос" />

        <RadioGroup
            android:id="@+id/rg_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <RadioButton
                android:id="@+id/option_one"
                style="@style/Text_style"
                android:buttonTint="@color/dark_green"
                android:text="@string/correct_ans_one"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/option_two"
                style="@style/Text_style"
                android:buttonTint="@color/dark_green"
                android:text="@string/correct_ans_two"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/option_three"
                style="@style/Text_style"
                android:buttonTint="@color/dark_green"
                android:text="@string/correct_ans_three"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/option_four"
                style="@style/Text_style"
                android:buttonTint="@color/dark_green"
                android:text="@string/correct_ans_four"
                android:textSize="18sp" />

        </RadioGroup>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>